--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,5 +1,2 @@
-<d-layout>
-  <d-content><app-chat-list
-      [chatMessages]="chatMessages$|async"></app-chat-list></d-content>
-  <d-footer><app-chat-input></app-chat-input></d-footer>
-</d-layout>
+<app-chat-list></app-chat-list>
+<app-chat-input></app-chat-input>
