--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+
+.large-btn {
+
+    height: 50px;
+    width: 50px;
+
+    button {
+        height: 100% !important;
+        width: 100% !important;
+
+        span {
+            font-size: 20px !important;
+        }
+    }
+}
+
+.layout {
+    padding-left: 30px;
+    padding-right: 30px;
+
+    max-width: 1260px;
+    margin: 0 auto;
+}
