--- a/src/app/pages/chat/components/chat-input/chat-input.component.scss
+++ b/src/app/pages/chat/components/chat-input/chat-input.component.scss
@@ -1,5 +1,9 @@
 @import 'ng-devui/styles-var/devui-var.scss';
 
+:host {
+    background-color: white;
+}
+
 .input-bar {
     position: fixed;
     left: 50%;
