--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'ng-devui/styles-var/devui-var.scss';
 
 .large-btn {
 
@@ -15,10 +16,10 @@
     }
 }
 
-.layout {
-    padding-left: 30px;
-    padding-right: 30px;
+// .layout {
+//     padding-left: 30px;
+//     padding-right: 30px;
 
-    max-width: 1260px;
-    margin: 0 auto;
-}
+//     max-width: 1260px;
+//     margin: 0 auto;
+// }
