--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,2 +1,4 @@
-<app-chat-list></app-chat-list>
-<app-chat-input></app-chat-input>
+<div class="chat-content">
+  <app-chat-list></app-chat-list>
+  <app-chat-input></app-chat-input>
+</div>
