--- a/src/app/pages/chat/components/chat-input/chat-input.component.scss
+++ b/src/app/pages/chat/components/chat-input/chat-input.component.scss
@@ -1,20 +1,24 @@
 @import 'ng-devui/styles-var/devui-var.scss';
 
-:host {
-    background-color: white;
+.input-wrapper {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 120px;
+    background-color: $devui-global-bg-normal;
+    border-top: 1px solid $devui-line;
 }
 
 .input-bar {
-    position: fixed;
-    left: 50%;
-    bottom: 0px;
-    transform: translate(-50%, 0);
-    width: 100%;
+    // padding-top: 30px;
     max-width: 1200px;
+    margin: 0 auto;
+    padding: 30px 0;
 
-    padding-top: 4px;
-    padding-bottom: 40px;
-    background-color: white;
+    @media only screen and (max-width: 1200px) {
+        padding: 30px 18px;
+    }
 
     d-button {
         vertical-align: bottom;
@@ -24,7 +28,7 @@
         }
 
         &.separate {
-            border-left: 1px solid $devui-base-bg-dark;
+            border-left: 1px solid $devui-line;
         }
     }
 }
@@ -33,6 +37,7 @@
     width: calc(100% - 340px);
     min-height: 50px;
     height: 50px;
+    // height: 100px;
     font-size: 16px;
     padding-top: 12px;
     padding-bottom: 12px;
