--- a/src/app/pages/chat/components/chat-list/chat-list.component.scss
+++ b/src/app/pages/chat/components/chat-list/chat-list.component.scss
@@ -1,10 +1,14 @@
 @import 'ng-devui/styles-var/devui-var.scss';
 
 .chat-list {
+    box-shadow: $devui-shadow-length-base $devui-light-shadow;
+    // border: 1px solid $devui-line;
+}
+
+.chat-item {
     font-size: 16px;
-    border-bottom: 1px solid $devui-dividing-line;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    border-bottom: 1px solid $devui-line;
+    padding: 10px 18px;
 
     &.bot {
         background-color: $devui-list-item-strip-bg;
