--- a/src/app/pages/setting/setting.component.scss
+++ b/src/app/pages/setting/setting.component.scss
@@ -6,8 +6,10 @@
     padding: 10px 0;
     display: flex;
     align-items: center;
+    border-bottom: 1px solid $devui-line;
+    // justify-content: space-between;
 
-    .back {
+    .operate {
         padding-right: 12px;
         font-size: 16px;
         border-right: 1px solid $devui-line;
@@ -23,10 +25,20 @@
     }
 }
 
+.setting-layout {
+    width: 100%;
+    height: 100%;
+    background-color: $devui-global-bg;
+}
+
 .setting-content {
     background-color: $devui-global-bg-normal;
-    padding: 12px 24px;
+    padding: 12px 30px;
     box-shadow: $devui-shadow-length-base $devui-light-shadow;
+    // border: 1px solid $devui-line;
+
+    max-width: 1260px;
+    margin: 0 auto;
 }
 
 .setting-title {
@@ -51,26 +63,13 @@ d-input-number {
 }
 
 .model-help {
-    margin-left: 5px;
+    margin-left: 2px;
     cursor: pointer;
     color: $devui-text;
-
+    font-size: 14px;
+    vertical-align: top;
 
     &:hover {
         color: $devui-primary-hover;
     }
-}
-
-.layout {
-    padding-left: 30px;
-    padding-right: 30px;
-
-    max-width: 1260px;
-    width: 100%;
-    margin: 0 auto;
-
-}
-
-body ::ng-deep {
-    background-color: $devui-glass-morphism-bg;
 }
