--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,4 +1,12 @@
 <div class="chat-content">
   <app-chat-list></app-chat-list>
-  <app-chat-input></app-chat-input>
+  <app-chat-input (chatsClick)="chatsClick()" (optionsClick)="optionsClick()"
+    (chatFinish)="chatFinish()" [chatTitle]="chatTitle"
+    [chatIndex]="chatIndex"></app-chat-input>
 </div>
+
+<ng-template #drawer>
+  <app-drawer-list [items]="drawerItems" [close]="close" (clearClick)="clearItems()"
+    (deleteClick)="deleteItem($event)"
+    (selectClick)="selectItems($event)"></app-drawer-list>
+</ng-template>
