--- a/src/app/pages/chat/components/chat-input/chat-input.component.scss
+++ b/src/app/pages/chat/components/chat-input/chat-input.component.scss
@@ -15,6 +15,7 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 30px 0;
+    position: relative;
 
     @media only screen and (max-width: 1200px) {
         padding: 30px 18px;
